aligned image, fixed width on input/button

--- a/style.css
+++ b/style.css
@@ -14,44 +14,42 @@ main {
 }
 #mainContainer { 
     border: 1px solid black;
-    height: 37rem;
     display: flex;
     background-color: white;
     border-radius: 2rem;
-    width: auto;
+    justify-content: space-between;
+}
+.secondaryContainer {
+    width: 45%;
+    padding: 3rem 0 1rem 4rem;
 }
 .imgContainer img{
     width: auto;
     height: 100%;
 }
 .imgContainer {
-    margin: 0;
-    padding: 0;
+    padding: 1.5rem 1.8rem 1.6rem 0;
 }
 
 h1 {
     font-size: 3rem;
 }
-.secondaryContainer {
-    text-align: left;
-    width: 50%;
-}
 input {
-    width: 100%;
     height: 3rem;
     border-radius: 0.5rem;
     border: 1px grey solid;
 }
 #email {
     padding-left: 1rem;
+    width: 100%;
 }
 form p {
     margin-bottom: 3px;
 }
 button {
+    width: 100%;
     font-size: 1rem;
     padding: 1rem;
-    width: 100%;
     margin-top: 1.3rem;
     background-color: hsl(235, 18%, 26%);
     color: white;
